# foto

./: .env  .gitignore  .project  .pydevproject  .travis.yml  CREDITS  LICENSE  MANIFEST.in  README  README.md  README.rst  brew_packages.txt  elk  install  pyproject.toml  requirements.txt  setup.cfg  setup.py  ubuntu_packages.txt  ubuntu_requirements.txt
data/: app.cfg
elk/: __init__.py  arrange.py  auto.py  cache.py  captions.py  cli.py  commands.py  config.py  config.yml  configuration.py  convert.py  creation_date.py  creation_datetime.py  default.cfg  filesystem.py  logger.py  main.py  metadata.py  names.py  optimize.py  parallel.py  photo.py  sharing.py  utils.py  video.py
elk/commands/: arrange.py  auto.py  captions.py  clean.py  convert.py  info.py  names.py
elk/utils/: __init__.py  creation_datetime.py  geo.py  metadata.py
foto/: __init__.py  cli.py  config.yml  logger.py
foto/commands/: arrange.py  auto.py  captions.py  clean.py  convert.py  info.py  names.py  pack.py  share.py  times.py
foto/utils/: __init__.py  creation_datetime.py  format_datetime.py  metadata.py
src/: Config.py  Controller.py  album.py  app.cfg  config.py  elk.py  log.py  main.py  photo.py  sync.py  upload.py
src/album/: Directory.py
src/application/: Controller.py  config.ini
src/filesystem/: Directory.py  File.py
src/image/: File.py
src/tools/: API.py  Config.py  ExifTool.py  (+2 more)
tests/: P1170591.MOV  base.py  test_cache.py  test_config.py  test_convert.py  test_datetimes.py  test_elk.py  test_filesystem.py  test_foto.py  test_photo.py  test_video.py  utils.py
