[tool.poetry]
name = "foto"
version = "1.2.0"
description = "Honza's command line photo manager"
authors = ["Honza Javorek <mail@honzajavorek.cz>"]
license = "ISC"
readme = "README.rst"
repository = "https://github.com/honzajavorek/foto"

[tool.poetry.scripts]
foto = "foto.cli:cli"

[tool.poetry.dependencies]
python = "3.10.*"
plumbum = "^1.8.0"
send2trash = "^1.8.0"
pync = "^2.0.3"
click = "^8.1.3"
geocoder = "^1.38.1"
pyaml = "^21.10.1"
lxml = "^4.9.1"
colorama = "^0.4.6"
python-slugify = "^6.1.2"
osxphotos = "^0.54.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylama = "^8.4.1"

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = "env venv .git"
addopts = "--cov=foto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
